--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 @import url(https://fonts.googleapis.com/css?family=Roboto:500);
+
 .App {
   text-align: center;
-  padding: 2% 5%;
 }
 
 .App * {
@@ -24,29 +24,52 @@ p {
   display: block;
 }
 
+.alert p {
+  border-radius: 5px;
+  max-width: 60%;
+  display: flex;
+  flex-direction: column;
+  margin-top: auto;
+  margin-left: auto;
+  margin-right: auto;
+  transition: all 0.5s ease-in;
+}
+h1.summary {
+  font-size: larger;
+  color: #7a4c75;
+}
+
 input[type="text"],
 input[type="number"] {
   padding: 8px 6px 8px 10px;
   border-radius: 4px;
-  outline: none;
-  border: 1px solid #ccc;
   font-size: 14px;
   line-height: 20px;
   align-self: center;
   height: 38px;
+  border: 2px solid #CD7389;
+  border-radius: 15px;
+}
+
+input[type="text"]:focus,
+input[type="number"]:focus {
+
+  background-color: rgb(255, 191, 191);
 }
 
 .city {
   width: 250px;
 }
-
+.event-numbers-text{
+  color: white;
+}
 .CitySearch {
   display: flex;
   flex-direction: column;
   flex-basis: 300px;
   max-width: 300px;
   margin: auto;
-  padding: 8px 6px 18px 10px;
+  position: relative;
 }
 
 .suggestions {
@@ -73,26 +96,88 @@ input[type="number"] {
 }
 
 .suggestions > li:hover {
-  background-color: #bcdcdb;
+  background-color: #CD7389;
 }
 
+@supports (display: grid) {
+  .event {
+    width: auto;
+    min-height: auto;
+    margin: 0;
+    padding: 10px;
+  }
+}
 .event {
+  background-color: #F5F1F3;
   padding: 10px 10px 35px;
   margin-bottom: 10px;
   text-align: left;
-  border: 1px solid #ccc;
   border-radius: 4px;
-  position: relative;
+  transition: 0.2s;
+  box-shadow: 1 black;
 }
 
-.details-btn {
-  position: absolute;
-  right: 5px;
-  bottom: 5px;
-  padding: 5px 8px;
-  border-radius: 4px;
-  outline: none;
+.event:hover {
+  box-shadow: 0 0.5em 0.5em -0.4em rgb(6, 6, 6);
+  transform: translateY(0.25em);
+}
+
+.number-events{
+  margin-top: 10px;;
+  display: block;
+}
+
+.show-details-btn {
+  width: 150px;
+  height: 30px;
+  background-color: #7A4C75;
+  color: #eee;
+  border: 2px solid;
+  border-radius: 15px;
+  box-sizing: border-box;
+  display: block;
+  font-weight: 700;
+  position: relative;
+  text-transform: uppercase;
+  transition: 0.2s;
+  float: right;
+  
+}
+.show-details-btn:hover {
+  box-shadow: 0 0.5em 0.5em -0.4em rgb(6, 6, 6);
+  transform: translateX(0.25em);
   cursor: pointer;
+}
+
+.events-container {
+  margin-left: 20px;
+  margin-right: 20px;
+}
+
+.hide-details-btn{
+  width: 150px;
+  height: 30px;
+  background-color: #7A4C75;
+  color: #eee;
+  border: 2px solid;
+  border-radius: 15px;
+  box-sizing: border-box;
+  display: block;
+  font-weight: 700;
+  position: relative;
+  text-transform: uppercase;
+  transition: 0.2s;
+  float: right;
+}
+.hide-details-btn:hover {
+  box-shadow: 0 0.5em 0.5em -0.4em rgb(6, 6, 6);
+  transform: translateX(0.25em);
+  cursor: pointer;
+}
+
+a.details-link {
+  color: #7A4C75;
+  margin-bottom: 10px;
 }
 
 .name {
@@ -139,7 +224,7 @@ input[type="number"] {
   flex-direction: column;
 }
 .data-vis-wrapper .recharts-responsive-container {
-  min-width: 100%;
+  min-width: 85%;
   display: flex;
 }
 .recharts-surface {
@@ -191,23 +276,38 @@ input[type="number"] {
 }
 .btn-text {
   float: right;
-  margin: 11px 11px 0 0;
   color: #fff;
   font-size: 14px;
   letter-spacing: 0.2px;
   font-family: "Roboto";
 }
 
-
-
-@media only screen and (min-width: 992px) {
-  .data-vis-wrapper {
-    flex-direction: row;
-  }
-  .data-vis-wrapper .recharts-responsive-container {
-    flex-basis: 50%;
-    max-width: 50%;
-    min-width: auto;
-    margin: 0 auto;
-  }
+.hero-container h2 {
+  color: #fff;
+  opacity: 0.8;
 }
+.hero-container p {
+  color: #fff;
+  font-size: xxx-large;
+  margin-top: -20px;
+  font-weight: 700;
+}
+
+
+@media screen and (min-width:700px){
+  .EventList {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-gap: 20px;
+    margin-top: 20px;
+    grid-auto-rows: minmax(100px,auto);
+  }
+ .data-vis-wrapper{
+  display: grid;
+  grid-template-columns: 1fr 2fr;
+  grid-gap: 20px;
+  margin-top: 20px;
+  grid-auto-rows: minmax(100px,auto);
+  margin-top: 50px;
+ }
+  }
