--- a/src/WelcomeScreen.css
+++ b/src/WelcomeScreen.css
@@ -3,7 +3,8 @@
     width: 100%;
     height: 100%;
     top: 0;
-    background: #7A4C75;
+    background: #000080;
+    font-family: 'Poppins', sans-serif;
     }
     .google-btn {
     width: 184px;
